# YDApi_Demo_1_188_78_0

./: CMakeLists.txt  README.md
config_files/: user_info.txt  yd_config.txt
include/: YdUserApiInfo.h  ydApi.h  ydDataStruct.h  ydDataType.h  ydError.h
src/: YdUserApiInfo.cpp  main.cpp
